sumo/tests/duarouter/errors/no_net/options.duarouter
--trip-files=increasing_trips.trips.xml -o routes.rou.xml
